--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_c_1.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_c_1.yml
@@ -2,7 +2,7 @@ DEBUG : False  # if true : model saving, logging turned off.
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-ONLY_INFERENCE : False
+ONLY_INFERENCE : True
 ONLY_VAL : False
 dataset : "coco"
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
@@ -64,11 +64,11 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : both_final #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name :   both_ft_lr9e8_mlpr32_wte_frozen_adpter_ft # both_final #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
-  batch_size : 128
+  batch_size : 100
   output_dir : /home/manugaur/EGG/inference_preds/
 
 #DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
