--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_imgcode.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_imgcode.yml
@@ -4,6 +4,7 @@ GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : True
 ONLY_VAL : False
+
 dataset : imagecode
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "discriminative" # (discriminative, cider, mle)
@@ -21,14 +22,12 @@ mllm : "clipcap"
 
 #lora
 lora : True
-finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+finetune_model : both # {gpt, clip} # automatically freeze gpt.transformer or CLIP
 lora_rank : 32
 clip_mlp_ft : True
 adapter_lora : False
 adapter_rank : 32
 clip_text : False
-
-# freezing layers
 freeze_wte : True
 freeze_adapter : False
 log_spice : False
@@ -36,7 +35,6 @@ log_spice : False
 neg_mining:
   curricullum : {100 : ["rand",5]}
   save_optimizer : False
-  bag_size : 5
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
   val_level : "rand"
@@ -66,7 +64,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  clip_ft_lr1e7 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name :  crrclm_5 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
