--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_testing.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_testing.yml
@@ -1,10 +1,12 @@
 DEBUG : False  # if true : model saving, logging turned off.  
 INIT_VAL : True
-GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-ONLY_INFERENCE : False
+GREEDY_BASELINE : False
+ONLY_INFERENCE : True
+SAVE_PREDS : True
 ONLY_VAL : False
 
+dataset : "coco"
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "discriminative" # (discriminative, cider, mle)
 prefix_len : 10
@@ -35,7 +37,7 @@ freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum :  {2 : ["easy", 5], 4 : ["medium",3], 6 : ["medium",5], 8 : ["medium",7], 11 : ["medium",10], 14 : ["medium",15], 16 : ["medium",17] , 20 : ["medium", 20]}
+  curricullum :  {20 : ["hard", 7]} #  , 7 : ["medium",10], 9 : ["hard",3], 11 : ["hard",5], 14 : ["hard",10], 17 : ["hard",15], 20 : ["hard",20]} 
   save_optimizer : False
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
@@ -59,17 +61,17 @@ opts:
   recv_clip_model : ViT-B/32 #ViT-L/14@336px
 
 WANDB:
-  logging : True
+  logging : False
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : crrclm_7 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : both_ft_hard_bsz20 #15,20 # crrclm_6 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
-
+ 
 inference : 
-  batch_size : 128
+  batch_size : 200
   output_dir : /home/manugaur/EGG/inference_preds/
 
 #DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
