--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_c_1_clip.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_c_1_clip.yml
@@ -1,12 +1,10 @@
-DEBUG : False # if true : model saving, logging turned off.  
+DEBUG : False  # if true : model saving, logging turned off.  
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : True
-SAVE_PREDS : False
 ONLY_VAL : False
-
-dataset : imagecode
+dataset : "coco"
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "discriminative" # (discriminative, cider, mle)
 prefix_len : 10
@@ -23,18 +21,20 @@ mllm : "clipcap"
 
 #lora
 lora : True
-finetune_model : both # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
 lora_rank : 32
 clip_mlp_ft : True
 adapter_lora : False
 adapter_rank : 32
 clip_text : False
+
+# freezing layers
 freeze_wte : True
 freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum : {100 : ["rand",5]}
+  curricullum :  {20 : ["rand",10]}
   save_optimizer : False
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
@@ -47,11 +47,10 @@ resume_training :
 
 opts: 
   baseline : mean
-  n_epochs : 20
-  batch_size : 16
+  batch_size : 100
   lr : 9e-8 #2e-5
   max_len : 50
-  checkpoint_freq : 1
+  checkpoint_freq : 0
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
@@ -65,12 +64,14 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  clip_crrclm_final #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : clip_final #both_ft_lr9e8_mlpr32_wte_frozen_adpter_ft # both_final #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
   batch_size : 100
   output_dir : /home/manugaur/EGG/inference_preds/
 
-#DEBUG, ONLY_INFERENCE,  INIT_VAL, logging, save_using_neg
+#DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
 #CKPT_DIR = f"{data}/{sr}_{config[WANDB][run_name]}
+
+
