--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_clip_2.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_clip_2.yml
@@ -2,9 +2,11 @@ DEBUG : False  # if true : model saving, logging turned off.
 INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-ONLY_INFERENCE : False
+ONLY_INFERENCE : True
+SAVE_PREDS : True
 ONLY_VAL : False
 
+dataset : "coco"
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "discriminative" # (discriminative, cider, mle)
 prefix_len : 10
@@ -18,29 +20,38 @@ diff_lr: False
 contrastive : False
 reinforce : True
 mllm : "clipcap"
+
+
 #lora
 lora : True
+finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
 lora_rank : 32
 clip_mlp_ft : True
-log_spice : False
-
-finetune_model : clip # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+adapter_lora : False
+adapter_rank : 32
 clip_text : False
-freeze_wte : False
+
+# freezing layers
+freeze_wte : True
 freeze_adapter : False
+log_spice : True
 
 neg_mining:
-  curricullum : {"rand" : 20} # , "medium" : 7, "hard" : 20} #,  "medium" : 5, "hard" : 10} # indexed from 1
-  bag_size : 5
+  curricullum :  {3 : ["hard", 2] , 8 : ["hard",3], 10 : ["hard",5], 12 : ["hard",7], 14 : ["hard",10], 17 : ["hard",15], 20 : ["hard",20]} 
+  save_optimizer : False
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
   val_level : "rand"
 
+resume_training : 
+  do : False
+  dir : sr_easy_bsz5
+  load_epoch  : 2
+
 opts: 
   baseline : mean
-  n_epochs : 20
-  batch_size : 350
-  lr : 5e-8 #2e-5
+  batch_size : 100
+  lr : 9e-8 #2e-5
   max_len : 50
   checkpoint_freq : 0
   num_workers : 16
@@ -50,18 +61,20 @@ opts:
   recv_clip_model : ViT-B/32 #ViT-L/14@336px
 
 WANDB:
-  logging : True
+  logging : False
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  clip_ft_lr5e8_all_unfrozen_g #suffix to "sr_{data}_"
+  run_name :  clip_crrclm_final # crrclm_6 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
-
+ 
 inference : 
-  batch_size : 128
+  batch_size : 200
   output_dir : /home/manugaur/EGG/inference_preds/
 
-#DEBUG, ONLY_INFERENCE,  INIT_VAL, logging, save_using_neg
+#DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
 #CKPT_DIR = f"{data}/{sr}_{config[WANDB][run_name]}
+
+
