--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_entropy.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_entropy.yml
@@ -3,7 +3,9 @@ INIT_VAL : True
 GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : True
+SAVE_PREDS : False
 ONLY_VAL : False
+
 dataset : "coco"
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "discriminative" # (discriminative, cider, mle)
@@ -19,9 +21,11 @@ contrastive : False
 reinforce : True
 mllm : "clipcap"
 
+
 #lora
-lora : True
-finetune_model : both # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+# lora = false --> MLE. (Load_best_model = False)
+lora : False
+finetune_model : llm  # {gpt, clip} # automatically freeze gpt.transformer or CLIP
 lora_rank : 32
 clip_mlp_ft : True
 adapter_lora : False
@@ -29,12 +33,12 @@ adapter_rank : 32
 clip_text : False
 
 # freezing layers
-freeze_wte : True
+freeze_wte : False
 freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum :  {20 : ["rand",10]}
+  curricullum :  {20 : ["hard", 3]} #  , 7 : ["medium",10], 9 : ["hard",3], 11 : ["hard",5], 14 : ["hard",10], 17 : ["hard",15], 20 : ["hard",20]} 
   save_optimizer : False
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
@@ -58,15 +62,15 @@ opts:
   recv_clip_model : ViT-B/32 #ViT-L/14@336px
 
 WANDB:
-  logging : True
+  logging : False
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :   both_ft_lr9e8_mlpr32_wte_frozen_adpter_ft # both_final #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : crrclm_5 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
-
+ 
 inference : 
   batch_size : 100
   output_dir : /home/manugaur/EGG/inference_preds/
