--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_testing.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_testing.yml
@@ -6,6 +6,7 @@ ONLY_INFERENCE : True
 SAVE_PREDS : True
 ONLY_VAL : False
 
+CIDER_SR : False
 dataset : "coco"
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "discriminative" # (discriminative, cider, mle)
@@ -67,11 +68,11 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : both_ft_hard_bsz20 #15,20 # crrclm_6 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : crrclm_5 #15,20 # crrclm_6 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
  
 inference : 
-  batch_size : 200
+  batch_size : 100
   output_dir : /home/manugaur/EGG/inference_preds/
 
 #DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
