--- a/egg/zoo/emergent_captioner/finetuning/configs/cider-sr.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/cider-sr.yml
@@ -6,7 +6,7 @@ ONLY_INFERENCE : False
 SAVE_PREDS :  True
 ONLY_VAL : False
 
-CIDER_SR : False
+CIDER_SR : True
 dataset : "coco"
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "cider" # (discriminative, cider, mle)
@@ -67,7 +67,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : sr_both_ft_lambda_5e-1_lr_1e-7_rand #cider_greedyB_llm_lora_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : both_ft_lambda_5e-1_lr_1e-7_rand #cider_greedyB_llm_lora_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
