--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_llm.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_llm.yml
@@ -1,10 +1,13 @@
 DEBUG : False  # if true : model saving, logging turned off.  
 INIT_VAL : True
-GREEDY_BASELINE : False
+GREEDY_BASELINE : True
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
+SAVE_PREDS :  True
 ONLY_VAL : False
 
+CIDER_SR : False
+dataset : "coco"
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "discriminative" # (discriminative, cider, mle)
 prefix_len : 10
@@ -19,24 +22,23 @@ contrastive : False
 reinforce : True
 mllm : "clipcap"
 
-
 #lora
 lora : True
-finetune_model : llm # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+finetune_model : llm # {llm, clip}
 lora_rank : 32
-clip_mlp_ft : False
+clip_mlp_ft : True
 adapter_lora : False
 adapter_rank : 32
 clip_text : False
 
 # freezing layers
-freeze_wte : True
+freeze_wte : False
 freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum :  {100 : ["rand",5]}
-  save_optimizer : False
+  curricullum :  {3 : ["hard", 2] , 8 : ["hard",3], 10 : ["hard",5], 12 : ["hard",7], 14 : ["hard",10], 17 : ["hard",15], 20 : ["hard",20]}  #{20 : ["rand",5]}  
+  save_optimizer : True
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
   val_level : "rand"
@@ -51,7 +53,7 @@ opts:
   batch_size : 100
   lr : 9e-8 #2e-5
   max_len : 50
-  checkpoint_freq : 2
+  checkpoint_freq : 0
   num_workers : 16
   dataset_dir : /home/manugaur/coco
   mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
@@ -65,14 +67,15 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : llm_wte_frozen_9e8 #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : llm_ft_9e-8_curri #cider_greedyB_llm_lora_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
-  batch_size : 128
+  batch_size : 100
   output_dir : /home/manugaur/EGG/inference_preds/
 
 #DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
 #CKPT_DIR = f"{data}/{sr}_{config[WANDB][run_name]}
 
+#DEBUG, logging
 
