--- a/egg/zoo/emergent_captioner/finetuning/configs/cider.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/cider.yml
@@ -67,7 +67,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : sr_both_ft_lambda_5e-1_lr_1e-7_rand #cider_greedyB_llm_lora_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : both_ft_lr_1e7 #cider_greedyB_llm_lora_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
@@ -77,4 +77,5 @@ inference :
 #DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
 #CKPT_DIR = f"{data}/{sr}_{config[WANDB][run_name]}
 
+#CIDER_SR : GREEDY_BASELINE = False 
 
