--- a/egg/zoo/emergent_captioner/finetuning/configs/sr_llm.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr_llm.yml
@@ -1,8 +1,8 @@
 DEBUG : False  # if true : model saving, logging turned off.  
 INIT_VAL : True
-GREEDY_BASELINE : True
+GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-ONLY_INFERENCE : False
+ONLY_INFERENCE : True
 SAVE_PREDS :  True
 ONLY_VAL : False
 
@@ -24,7 +24,7 @@ mllm : "clipcap"
 
 #lora
 lora : True
-finetune_model : llm # {llm, clip}
+finetune_model : llm # {llm, clip, both} # automatically freeze gpt.transformer or CLIP
 lora_rank : 32
 clip_mlp_ft : True
 adapter_lora : False
@@ -32,12 +32,12 @@ adapter_rank : 32
 clip_text : False
 
 # freezing layers
-freeze_wte : False
+freeze_wte : True
 freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum :  {3 : ["hard", 2] , 8 : ["hard",3], 10 : ["hard",5], 12 : ["hard",7], 14 : ["hard",10], 17 : ["hard",15], 20 : ["hard",20]}  #{20 : ["rand",5]}  
+  curricullum : {20 : ["rand",5]}  #{3 : ["hard", 2] , 8 : ["hard",3], 10 : ["hard",5], 12 : ["hard",7], 14 : ["hard",10], 17 : ["hard",15], 20 : ["hard",20]} 
   save_optimizer : True
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
@@ -67,7 +67,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : llm_ft_9e-8_curri #cider_greedyB_llm_lora_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : llm_ft_100 #cider_greedyB_llm_lora_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
@@ -77,5 +77,5 @@ inference :
 #DEBUG, INIT_VAL | ONLY_INFERENCE,  , logging, save_using_neg
 #CKPT_DIR = f"{data}/{sr}_{config[WANDB][run_name]}
 
-#DEBUG, logging
+#CIDER_SR : GREEDY_BASELINE = False 
 
