--- a/egg/zoo/emergent_captioner/finetuning/configs/cider-sr.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/cider-sr.yml
@@ -2,7 +2,7 @@ DEBUG : False  # if true : model saving, logging turned off.
 INIT_VAL : True
 GREEDY_BASELINE : True
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
-ONLY_INFERENCE : False
+ONLY_INFERENCE : True
 SAVE_PREDS :  True
 ONLY_VAL : False
 
@@ -37,7 +37,7 @@ freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum : {20 : ["rand",5]}  #{3 : ["hard", 2] , 8 : ["hard",3], 10 : ["hard",5], 12 : ["hard",7], 14 : ["hard",10], 17 : ["hard",15], 20 : ["hard",20]} 
+  curricullum : {3 : ["hard", 2] , 8 : ["hard",3], 10 : ["hard",5], 12 : ["hard",7], 14 : ["hard",10], 17 : ["hard",15], 20 : ["hard",20]}  #{20 : ["rand",5]}  #{4 : ["hard", 2] , 9 : ["hard",3], 13 : ["hard",5], 16 : ["hard",7], 20 : ["hard",10], 24 : ["hard",15], 28 : ["hard",20]} 
   save_optimizer : True
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
@@ -55,10 +55,10 @@ opts:
   max_len : 50
   checkpoint_freq : 0
   num_workers : 16
-  dataset_dir : /home/manugaur/coco
-  mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
-  checkpoint_dir : /home/manugaur/EGG/checkpoints/blip2mistral/sr
-  recv_clip_model : ViT-B/32 #ViT-L/14@336px
+  dataset_dir : /workspace/manugaur/coco
+  mle_model_path : /workspace/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
+  checkpoint_dir : /workspace/manugaur/EGG/checkpoints/blip2mistral/sr
+  recv_clip_model : ViT-B/32
 
 WANDB:
   logging : True
@@ -67,7 +67,7 @@ WANDB:
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : both_ft_lr_1e7_rand #cider_greedyB_llm_lora_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : lambda_1e7_srlv_lr_1e7_g_baseline_curri #cider_greedyB_llm_lora_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
