--- a/egg/zoo/emergent_captioner/finetuning/configs/cider.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/cider.yml
@@ -1,6 +1,6 @@
 DEBUG : False  # if true : model saving, logging turned off.  
 INIT_VAL : True
-GREEDY_BASELINE : True
+GREEDY_BASELINE : False
 SAVE_BEST_METRIC : True # to save nothing : = False and checkpoint_freq = 0
 ONLY_INFERENCE : False
 SAVE_PREDS :  True
@@ -24,7 +24,7 @@ mllm : "clipcap"
 
 #lora
 lora : True
-finetune_model : both # {gpt, clip} # automatically freeze gpt.transformer or CLIP
+finetune_model : llm # {llm, clip}
 lora_rank : 32
 clip_mlp_ft : True
 adapter_lora : False
@@ -32,12 +32,12 @@ adapter_rank : 32
 clip_text : False
 
 # freezing layers
-freeze_wte : True
+freeze_wte : False
 freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum : {20 : ["rand",5]}  #{3 : ["hard", 2] , 8 : ["hard",3], 10 : ["hard",5], 12 : ["hard",7], 14 : ["hard",10], 17 : ["hard",15], 20 : ["hard",20]} 
+  curricullum : {20 : ["rand",5]}  # {3 : ["hard", 2] , 8 : ["hard",3], 10 : ["hard",5], 12 : ["hard",7], 14 : ["hard",10], 17 : ["hard",15], 20 : ["hard",20]}
   save_optimizer : True
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
@@ -51,7 +51,7 @@ resume_training :
 opts: 
   baseline : mean
   batch_size : 100
-  lr : 1e-7 #2e-5
+  lr : 1e-6  #2e-5
   max_len : 50
   checkpoint_freq : 0
   num_workers : 16
@@ -61,13 +61,13 @@ opts:
   recv_clip_model : ViT-B/32 #ViT-L/14@336px
 
 WANDB:
-  logging : True
+  logging : True 
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name : both_ft_lr_1e7 #cider_greedyB_llm_lora_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name : llm_ft_lr_1e6_avg_baseline_rand #cider_greedyB_llm_lora_ft #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
