--- a/egg/zoo/emergent_captioner/finetuning/configs/sr.yml
+++ b/egg/zoo/emergent_captioner/finetuning/configs/sr.yml
@@ -6,7 +6,8 @@ ONLY_INFERENCE : True
 SAVE_PREDS : False
 ONLY_VAL : False
 
-dataset : imagecode
+CIDER_SR : False
+dataset : coco
 captions_type : "coco" #coco, (mistral, mistral_4), blip_holistic
 train_method : "discriminative" # (discriminative, cider, mle)
 prefix_len : 10
@@ -29,13 +30,15 @@ clip_mlp_ft : True
 adapter_lora : False
 adapter_rank : 32
 clip_text : False
+
+# freezing layers
 freeze_wte : True
 freeze_adapter : False
 log_spice : False
 
 neg_mining:
-  curricullum : {100 : ["rand",5]}
-  save_optimizer : False
+  curricullum : {3 : ["hard", 2] , 8 : ["hard",3], 10 : ["hard",5], 12 : ["hard",7], 14 : ["hard",10], 17 : ["hard",15], 20 : ["hard",20]}  #{20 : ["rand",5]}  #{4 : ["hard", 2] , 9 : ["hard",3], 13 : ["hard",5], 16 : ["hard",7], 20 : ["hard",10], 24 : ["hard",15], 28 : ["hard",20]} 
+  save_optimizer : True
   save_using_neg : False #save model i.e best on neg_dataloader 
   val_bag_size : 5
   val_level : "rand"
@@ -48,24 +51,24 @@ resume_training :
 opts: 
   baseline : mean
   n_epochs : 20
-  batch_size : 16
+  batch_size : 100
   lr : 9e-8 #2e-5
   max_len : 50
   checkpoint_freq : 1
   num_workers : 16
-  dataset_dir : /home/manugaur/coco
-  mle_model_path : /home/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
-  checkpoint_dir : /home/manugaur/EGG/checkpoints/blip2mistral/sr
-  recv_clip_model : ViT-B/32 #ViT-L/14@336px
+  dataset_dir : /workspace/manugaur/coco
+  mle_model_path : /workspace/manugaur/EGG/checkpoints/blip2mistral/mle/best.pt #it loads only sender.clipcap (adapter + llm)
+  checkpoint_dir : /workspace/manugaur/EGG/checkpoints/blip2mistral/sr
+  recv_clip_model : ViT-B/32
 
 WANDB:
-  logging : False
+  logging : True
   sweep : False
   sweep_id: ""
   sweep_run_count : 100
   entity : "manugaur"
   project : "emergent_captioner"
-  run_name :  clip_crrclm_final #adapter_r32 #lr9e8_lora_r32_mlp_ft 
+  run_name :  both_final #adapter_r32 #lr9e8_lora_r32_mlp_ft 
   log_mmvp_all : False
 
 inference : 
